--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,32 @@
-.App {
-  text-align: center;
-}
+.app-background-screen{
+  background-color: black;
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.header{
+  height: 75px;
+  width: 100vw;
+  border-bottom: 1px solid black;
+  position: fixed;
+  top: 0;
+  left: 0;
   color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-
-.App-link {
-  color: #61dafb;
+.home-landing-screen{
+  background-image: url('./images/Homeportfolio.jpg');
+  background-size: cover;
+  background-position: left center;
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.home-name-landing{
+  color: white;
+  font-size: 6em;
+  margin-right: 20px;
 }
