--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');
 .app-background-screen{
   background-color: black;
 
@@ -12,10 +13,27 @@
   color: white;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 }
+
+.header-menu{
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    font-family: 'Roboto Mono', monospace;
+}
+
+.header-menu > div {
+    width: fit-content;
+    border-bottom: 1px solid white;
+    cursor: pointer;
+}
+
+
+
 .home-landing-screen{
-  background-image: url('./images/Homeportfolio.jpg');
+  /* background-image: url('./images/Homeportfolio.jpg'); */
   background-size: cover;
   background-position: left center;
   background-repeat: no-repeat;
@@ -23,7 +41,8 @@
   width: 100vw;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
+  background-color: #404040;
 }
 .home-name-landing{
   color: white;
